--- a/projects.Rmd
+++ b/projects.Rmd
@@ -91,7 +91,7 @@ Figure 1: Distribution of DBD895 <br>
 
 <br>
 
-Figure 2: Distribution of BMXBMI (Before Log Transformation)
+Figure 2: Distribution of BMXBMI (Before Log Transformation) <br>
 <img src="images/figure2.jpg" alt="2" style="width:50%; border:1px solid">
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;We performed a backward model selection process to determine the best linear regression model to account for our exposure, outcome, and covariates. Because some of our variables were used as proxies and imperfectly measured what we wanted to examined and because of the sheer number of covariates we wanted to include in the model, we conservatively went for using an alpha level of 0.10. Our first model selection step included all variables (see Figure 3); because frequency of alcohol consumption had a p-value of 0.7511, we removed variable ALQ120Q. Our second model selection step indicated that our interaction term between gender and frequency of alcohol consumption had a p-value of 0.8972, so we removed the associated interaction term. Our third model selection step indicated that the variable examining the ratio of family income to poverty level had a p-value of 0.4281, so we removed variable INDFMPIR. Our final linear regression model included number of meals prepared away from home, age, gender, race/ethnicity, education levels, history of blood pressure, and physical activity levels as predictors in our model (see Figure 4). All covariates in this model were significant at alpha = 0.10.
