--- a/resume.Rmd
+++ b/resume.Rmd
@@ -17,6 +17,11 @@ output:
 background-color: #337ab7;
 }
 
+#Drop-Down Menu Color
+.navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:focus, .navbar-default .navbar-nav>.open>a:hover {
+background-color: #337ab7;
+}
+
 .navbar-default {
 background-color: #337ab7;
 }
@@ -34,5 +39,7 @@ font-weight: bold;
 </style>
 
 <br>
-<img src="images/Resume.jpg" alt="Resume" style="width:100%; border:1px solid">
+```{r resume, echo = FALSE, out.width = "100%"}
+knitr::include_graphics("images/resume.jpg")
+```
 
