--- a/index.Rmd
+++ b/index.Rmd
@@ -55,12 +55,12 @@ I am currently a second-year graduate student in the Department of Epidemiology 
 
 #### Website
 
-**I built this website using R and GitHub (with a bit of CSS and HTML) so that I could showcase some of the projects that I have worked on over the past couple of years.** I tried incorporating projects that showcase my various competencies, including:
+**I built this website using R and GitHub (with a bit of CSS and HTML) to showcase some of the projects that I have worked on over the past couple of years.** I tried incorporating projects that highlight my various competencies, including:
 
 * Usage of various statistical programs and/or languages (e.g., SQL, R, SAS)
 * Ability to write scientific or research papers
 * Understanding of how to clean, manipulate, and analyze data
-* Knowledge of how to apply various regression techniques and models (e.g., linear, logistic)
+* Knowledge of how to apply various regression techniques and interpret models (e.g., linear, logistic)
 
 Please take the time to glance at some of the projects on this website!
 
