--- a/index.Rmd
+++ b/index.Rmd
@@ -55,9 +55,9 @@ I am currently a second-year graduate student in the Department of Epidemiology 
 
 #### Website
 
-**I built this website using R and GitHub (with a bit of CSS and HTML) to showcase some of the projects that I have worked on over the past couple of years.** I tried incorporating projects that highlight my various competencies, including:
+**I built this website using R and GitHub (with a bit of CSS and HTML) to showcase some of the projects that I have worked on over the past couple of years.** I incorporated projects that highlight my various competencies, including:
 
-* Usage of various statistical programs and/or languages (e.g., SQL, R, SAS)
+* Usage of various statistical programs and/or languages (e.g., R, SAS, SQL)
 * Ability to write scientific or research papers
 * Understanding of how to clean, manipulate, and analyze data
 * Knowledge of how to apply various regression techniques and interpret models (e.g., linear, logistic)
